--- a/index.html
+++ b/index.html
@@ -45,63 +45,63 @@
           <p class="tituloProduto">Laço Adulto/Infantil</p>
           <img src="imagens/tiaras/t2.png" width="200px" height="200x">
           <p class="precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Tiara Adulto/infantil</p>
           <img src="imagens/tiaras/t3.png" width="200px" height="200x"">
           <p class=" precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Tiara Adulto/infantil</p>
           <img src="imagens/tiaras/t4.png" width="200px" height="200px">
           <p class="precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Laço Adulto/Infantil</p>
           <img src="imagens/tiaras/t5.png" width="200px" height="200x">
           <p class="precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Tiara Adulto/infantil</p>
           <img src="imagens/tiaras/t6.png" width="200px" height="200x"">
           <p class=" precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Tiara Adulto/infantil</p>
           <img src="imagens/tiaras/t7.png" width="200px" height="200x"">
           <p class=" precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Tiara Adulto/infantil</p>
           <img src="imagens/tiaras/t8.png" width="200px" height="200x"">
           <p class=" precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Tiara Adulto/infantil</p>
           <img src="imagens/tiaras/t9.png" width="200px" height="200x"">
           <p class= precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div>
 
         <div class="produto">
           <p class="tituloProduto">Tiara Adulto/infantil</p>
           <img src="imagens/tiaras/t10.png" width="200px" height="200x"">
           <p class=" precoProduto">R$: 29,90</p>
-          <p id="comprar"><a href="http://www.pudim.com.br/">Comprar</a></p>
+          <p id="comprar"><a href="https://shre.ink/QpO5">Comprar</a></p>
         </div </div>
       </div>
 
